; ModuleID = '/home/carl/AnghaBench/vlc/test/extr_vlc-demux-run.c_main.c'
source_filename = "/home/carl/AnghaBench/vlc/test/extr_vlc-demux-run.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlc_run_args = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"Usage: [VLC_TARGET=demux] %s <filename>\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.vlc_run_args, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = call i32 @vlc_run_args_init(%struct.vlc_run_args* %7)
  %9 = load i32, i32* %4, align 4
  switch i32 %9, label %17 [
    i32 2, label %10
  ]

10:                                               ; preds = %2
  %11 = load i8**, i8*** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sub nsw i32 %12, 1
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8*, i8** %11, i64 %14
  %16 = load i8*, i8** %15, align 8
  store i8* %16, i8** %6, align 8
  br label %23

17:                                               ; preds = %2
  %18 = load i32, i32* @stderr, align 4
  %19 = load i8**, i8*** %5, align 8
  %20 = getelementptr inbounds i8*, i8** %19, i64 0
  %21 = load i8*, i8** %20, align 8
  %22 = call i32 @fprintf(i32 %18, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i8* %21)
  store i32 1, i32* %3, align 4
  br label %27

23:                                               ; preds = %10
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @vlc_demux_process_path(%struct.vlc_run_args* %7, i8* %24)
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %23, %17
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @vlc_run_args_init(%struct.vlc_run_args*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1

declare dso_local i32 @vlc_demux_process_path(%struct.vlc_run_args*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
